--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "mocha": "^1.21.4",
     "traceur-runtime": "0.0.59",
     "uberproto": "^1.1.2"
+  },
+  "dependencies": {
+    "lodash": "^4.11.1"
   }
 }
